# tensorflow

tensorflow/lite/micro/: CMakeLists.txt  README_CMAKE.md
tensorflow/lite/micro/benchmarks/: CMakeLists.txt
tensorflow/lite/micro/cmake/: helpers.cmake
tensorflow/lite/micro/cmake/toolchain/: arm-none-eabi-gcc.cmake  armclang.cmake  default.cmake
tensorflow/lite/micro/cortex_m_generic/: CMakeLists.txt
tensorflow/lite/micro/examples/: CMakeLists.txt
tensorflow/lite/micro/examples/person_detection/: CMakeLists.txt
tensorflow/lite/micro/kernels/: CMakeLists.txt
tensorflow/lite/micro/kernels/cmsis_nn/: CMakeLists.txt
tensorflow/lite/micro/kernels/ethos_u/: CMakeLists.txt
tensorflow/lite/micro/memory_planner/: CMakeLists.txt
tensorflow/lite/micro/targets/sparkfun_edge/: CMakeLists.txt  hello_world.ld.patch  startup_gcc.c.patch
tensorflow/lite/micro/targets/sparkfun_edge/cmake/toolchain/: arm-none-eabi-gcc.cmake
tensorflow/lite/micro/testing/: CMakeLists.txt
